--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,6 @@
         <link rel="icon" type="image/x-icon" href="favicon.ico">
     </head>
     <body>
-    <app-root>Loading...</app-root>
+    <app-root><b>Loading...</b></app-root>
 </body>
 </html>
